--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <body>
 <center>
     <h2> Registarion Form </h2>
-<form action="registration.php" method="POST">
-  <label for="fname">First name:</label><br>
+<form action="index.php" method="POST">
+  <label for="fname">Full Name:</label><br>
   <input type="text" id="fname" name="fname" ><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" ><br>
   <label for="Email">Email:</label><br>
   <input type="text" id="email" name="email" ><br><br>
   <label for="pin">PIN:</label><br>
@@ -20,4 +18,7 @@
 </center>
 </body>
 </html>
+
+
+
 
